--- a/DirectXTex/DirectXTex_Desktop_2015.vcxproj
+++ b/DirectXTex/DirectXTex_Desktop_2015.vcxproj
@@ -352,18 +352,32 @@
   <ItemGroup>
     <None Include="Shaders\Compiled\BC6HEncode_EncodeBlockCS.inc" />
     <None Include="Shaders\Compiled\BC6HEncode_EncodeBlockCS.pdb" />
+    <None Include="Shaders\Compiled\BC6HEncode_EncodeBlockCS_cs40.inc" />
+    <None Include="Shaders\Compiled\BC6HEncode_EncodeBlockCS_cs40.pdb" />
     <None Include="Shaders\Compiled\BC6HEncode_TryModeG10CS.inc" />
     <None Include="Shaders\Compiled\BC6HEncode_TryModeG10CS.pdb" />
+    <None Include="Shaders\Compiled\BC6HEncode_TryModeG10CS_cs40.inc" />
+    <None Include="Shaders\Compiled\BC6HEncode_TryModeG10CS_cs40.pdb" />
     <None Include="Shaders\Compiled\BC6HEncode_TryModeLE10CS.inc" />
     <None Include="Shaders\Compiled\BC6HEncode_TryModeLE10CS.pdb" />
+    <None Include="Shaders\Compiled\BC6HEncode_TryModeLE10CS_cs40.inc" />
+    <None Include="Shaders\Compiled\BC6HEncode_TryModeLE10CS_cs40.pdb" />
     <None Include="Shaders\Compiled\BC7Encode_EncodeBlockCS.inc" />
     <None Include="Shaders\Compiled\BC7Encode_EncodeBlockCS.pdb" />
+    <None Include="Shaders\Compiled\BC7Encode_EncodeBlockCS_cs40.inc" />
+    <None Include="Shaders\Compiled\BC7Encode_EncodeBlockCS_cs40.pdb" />
     <None Include="Shaders\Compiled\BC7Encode_TryMode02CS.inc" />
     <None Include="Shaders\Compiled\BC7Encode_TryMode02CS.pdb" />
+    <None Include="Shaders\Compiled\BC7Encode_TryMode02CS_cs40.inc" />
+    <None Include="Shaders\Compiled\BC7Encode_TryMode02CS_cs40.pdb" />
     <None Include="Shaders\Compiled\BC7Encode_TryMode137CS.inc" />
     <None Include="Shaders\Compiled\BC7Encode_TryMode137CS.pdb" />
+    <None Include="Shaders\Compiled\BC7Encode_TryMode137CS_cs40.inc" />
+    <None Include="Shaders\Compiled\BC7Encode_TryMode137CS_cs40.pdb" />
     <None Include="Shaders\Compiled\BC7Encode_TryMode456CS.inc" />
     <None Include="Shaders\Compiled\BC7Encode_TryMode456CS.pdb" />
+    <None Include="Shaders\Compiled\BC7Encode_TryMode456CS_cs40.inc" />
+    <None Include="Shaders\Compiled\BC7Encode_TryMode456CS_cs40.pdb" />
     <None Include="Shaders\CompileShaders.cmd" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
