--- a/DirectXTex/DirectXTex_XboxOneXDK_2015.vcxproj
+++ b/DirectXTex/DirectXTex_XboxOneXDK_2015.vcxproj
@@ -27,18 +27,32 @@
     <None Include="DirectXTex.inl" />
     <None Include="Shaders\Compiled\BC6HEncode_EncodeBlockCS.inc" />
     <None Include="Shaders\Compiled\BC6HEncode_EncodeBlockCS.pdb" />
+    <None Include="Shaders\Compiled\BC6HEncode_EncodeBlockCS_cs40.inc" />
+    <None Include="Shaders\Compiled\BC6HEncode_EncodeBlockCS_cs40.pdb" />
     <None Include="Shaders\Compiled\BC6HEncode_TryModeG10CS.inc" />
     <None Include="Shaders\Compiled\BC6HEncode_TryModeG10CS.pdb" />
+    <None Include="Shaders\Compiled\BC6HEncode_TryModeG10CS_cs40.inc" />
+    <None Include="Shaders\Compiled\BC6HEncode_TryModeG10CS_cs40.pdb" />
     <None Include="Shaders\Compiled\BC6HEncode_TryModeLE10CS.inc" />
     <None Include="Shaders\Compiled\BC6HEncode_TryModeLE10CS.pdb" />
+    <None Include="Shaders\Compiled\BC6HEncode_TryModeLE10CS_cs40.inc" />
+    <None Include="Shaders\Compiled\BC6HEncode_TryModeLE10CS_cs40.pdb" />
     <None Include="Shaders\Compiled\BC7Encode_EncodeBlockCS.inc" />
     <None Include="Shaders\Compiled\BC7Encode_EncodeBlockCS.pdb" />
+    <None Include="Shaders\Compiled\BC7Encode_EncodeBlockCS_cs40.inc" />
+    <None Include="Shaders\Compiled\BC7Encode_EncodeBlockCS_cs40.pdb" />
     <None Include="Shaders\Compiled\BC7Encode_TryMode02CS.inc" />
     <None Include="Shaders\Compiled\BC7Encode_TryMode02CS.pdb" />
+    <None Include="Shaders\Compiled\BC7Encode_TryMode02CS_cs40.inc" />
+    <None Include="Shaders\Compiled\BC7Encode_TryMode02CS_cs40.pdb" />
     <None Include="Shaders\Compiled\BC7Encode_TryMode137CS.inc" />
     <None Include="Shaders\Compiled\BC7Encode_TryMode137CS.pdb" />
+    <None Include="Shaders\Compiled\BC7Encode_TryMode137CS_cs40.inc" />
+    <None Include="Shaders\Compiled\BC7Encode_TryMode137CS_cs40.pdb" />
     <None Include="Shaders\Compiled\BC7Encode_TryMode456CS.inc" />
     <None Include="Shaders\Compiled\BC7Encode_TryMode456CS.pdb" />
+    <None Include="Shaders\Compiled\BC7Encode_TryMode456CS_cs40.inc" />
+    <None Include="Shaders\Compiled\BC7Encode_TryMode456CS_cs40.pdb" />
     <None Include="Shaders\CompileShaders.cmd" />
   </ItemGroup>
   <ItemGroup>
@@ -229,8 +243,6 @@
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
   <Target Name="ATGEnsureShaders" BeforeTargets="PrepareForBuild">
-    <Exec Condition="!Exists('Shaders/Compiled/BC6HEncode_EncodeBlockCS.inc')"
-        WorkingDirectory="$(ProjectDir)Shaders"
-        Command="CompileShaders" />
+    <Exec Condition="!Exists('Shaders/Compiled/BC6HEncode_EncodeBlockCS.inc')" WorkingDirectory="$(ProjectDir)Shaders" Command="CompileShaders" />
   </Target>
 </Project>
