Started texenvmap tool

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -116,17 +116,23 @@ add_executable(texdiag Texdiag/texdiag.cpp)
 target_link_libraries(texdiag ${PROJECT_NAME})
 source_group(texdiag REGULAR_EXPRESSION Texdiag/*.*)
 
+add_executable(texenvmap Texenvmap/texenvmap.cpp)
+target_link_libraries(texenvmap ${PROJECT_NAME})
+source_group(texenvmap REGULAR_EXPRESSION Texenvmap/*.*)
+
 if(MSVC)
     target_compile_options(${PROJECT_NAME} PRIVATE /fp:fast)
     target_compile_options(texassemble PRIVATE /fp:fast)
     target_compile_options(texconv PRIVATE /fp:fast)
     target_compile_options(texdiag PRIVATE /fp:fast)
+    target_compile_options(texenvmap PRIVATE /fp:fast)
 
     if (${CMAKE_SIZEOF_VOID_P} EQUAL "4")
         target_compile_options(${PROJECT_NAME} PRIVATE /arch:SSE2)
         target_compile_options(texassemble PRIVATE /arch:SSE2)
         target_compile_options(texconv PRIVATE /arch:SSE2)
         target_compile_options(texdiag PRIVATE /arch:SSE2)
+        target_compile_options(texenvmap PRIVATE /arch:SSE2)
     endif()
 endif()
 
@@ -140,18 +146,21 @@ if ( CMAKE_CXX_COMPILER_ID MATCHES "Clang" )
     target_compile_options(texassemble PRIVATE ${WarningsEXE})
     target_compile_options(texconv PRIVATE ${WarningsEXE})
     target_compile_options(texdiag PRIVATE ${WarningsEXE} "-Wno-double-promotion" )
+    target_compile_options(texenvmap PRIVATE ${WarningsEXE})
 endif()
 if ( CMAKE_CXX_COMPILER_ID MATCHES "MSVC" )
     target_compile_options(${PROJECT_NAME} PRIVATE /permissive- /JMC- /Zc:__cplusplus)
     target_compile_options(texassemble PRIVATE /permissive- /Zc:__cplusplus)
     target_compile_options(texconv PRIVATE /permissive- /Zc:__cplusplus)
     target_compile_options(texdiag PRIVATE /permissive- /Zc:__cplusplus)
+    target_compile_options(texenvmap PRIVATE /permissive- /Zc:__cplusplus)
 
     if(ENABLE_CODE_ANALYSIS)
       target_compile_options(${PROJECT_NAME} PRIVATE /analyze)
       target_compile_options(texassemble PRIVATE /analyze)
       target_compile_options(texconv PRIVATE /analyze)
       target_compile_options(texdiag PRIVATE /analyze)
+      target_compile_options(texenvmap PRIVATE /analyze)
    endif()
 
 
@@ -160,6 +169,7 @@ if ( CMAKE_CXX_COMPILER_ID MATCHES "MSVC" )
         target_compile_options(texassemble PRIVATE /Zc:preprocessor /wd5105)
         target_compile_options(texconv PRIVATE /Zc:preprocessor /wd5105)
         target_compile_options(texdiag PRIVATE /Zc:preprocessor /wd5105)
+        target_compile_options(texenvmap PRIVATE /Zc:preprocessor /wd5105)
     endif()
 
     if(BC_USE_OPENMP)
@@ -171,6 +181,7 @@ if ( CMAKE_CXX_COMPILER_ID MATCHES "MSVC" )
     target_compile_options(texassemble PRIVATE ${WarningsEXE})
     target_compile_options(texconv PRIVATE ${WarningsEXE})
     target_compile_options(texdiag PRIVATE ${WarningsEXE})
+    target_compile_options(texenvmap PRIVATE ${WarningsEXE})
 endif()
 
 if(WIN32)
@@ -178,6 +189,7 @@ if(WIN32)
     target_compile_definitions(texassemble PRIVATE _UNICODE UNICODE _WIN32_WINNT=0x0601)
     target_compile_definitions(texconv PRIVATE _UNICODE UNICODE _WIN32_WINNT=0x0601)
     target_compile_definitions(texdiag PRIVATE _UNICODE UNICODE _WIN32_WINNT=0x0601)
+    target_compile_definitions(texenvmap PRIVATE _UNICODE UNICODE _WIN32_WINNT=0x0601)
 
     if(BUILD_DX12)
         target_compile_definitions(${PROJECT_NAME} PRIVATE _WIN32_WINNT=0x0A00)
