--- a/Texenvmap/Texenvmap_Desktop_2017.vcxproj.filters
+++ b/Texenvmap/Texenvmap_Desktop_2017.vcxproj.filters
@@ -5,14 +5,42 @@
       <UniqueIdentifier>{8e114980-c1a3-4ada-ad7c-83caadf5daeb}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe</Extensions>
     </Filter>
+    <Filter Include="Shaders">
+      <UniqueIdentifier>{06310821-17c0-4daa-9d33-4e2588682319}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Shaders\Compiled">
+      <UniqueIdentifier>{73777593-2723-454b-b988-aeff913f02db}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Shaders\Symbols">
+      <UniqueIdentifier>{d83a7a3a-559e-47e8-9080-c5d10308a326}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="texassemble.cpp" />
-    <ClCompile Include="AnimatedGif.cpp" />
+    <ClCompile Include="texenvmap.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ResourceCompile Include="texassemble.rc">
+    <ResourceCompile Include="texenvmap.rc">
       <Filter>Resource Files</Filter>
     </ResourceCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Shaders\CompileShaders.cmd">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="Shaders\Texenvmap.fx">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="Shaders\Compiled\Texenvmap_PSBasic.inc">
+      <Filter>Shaders\Compiled</Filter>
+    </None>
+    <None Include="Shaders\Compiled\Texenvmap_VSBasic.inc">
+      <Filter>Shaders\Compiled</Filter>
+    </None>
+    <None Include="Shaders\Compiled\Texenvmap_PSBasic.pdb">
+      <Filter>Shaders\Symbols</Filter>
+    </None>
+    <None Include="Shaders\Compiled\Texenvmap_VSBasic.pdb">
+      <Filter>Shaders\Symbols</Filter>
+    </None>
   </ItemGroup>
 </Project>
