--- a/Texenvmap/Texenvmap_Desktop_2019.vcxproj.filters
+++ b/Texenvmap/Texenvmap_Desktop_2019.vcxproj.filters
@@ -5,6 +5,15 @@
       <UniqueIdentifier>{8e114980-c1a3-4ada-ad7c-83caadf5daeb}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe</Extensions>
     </Filter>
+    <Filter Include="Shaders">
+      <UniqueIdentifier>{42b93aa2-c2fb-4b9a-a7a9-e54b3dc5739b}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Shaders\Compiled">
+      <UniqueIdentifier>{0ae5b05b-2b9d-428a-8655-675fecc62d98}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Shaders\Symbols">
+      <UniqueIdentifier>{5dc4d11e-66ea-440a-a2b7-7e428d6ced54}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="texenvmap.cpp" />
@@ -13,5 +22,23 @@
     <ResourceCompile Include="texenvmap.rc">
       <Filter>Resource Files</Filter>
     </ResourceCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Shaders\CompileShaders.cmd">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="Shaders\Texenvmap.fx" />
+    <None Include="Shaders\Compiled\Texenvmap_PSBasic.inc">
+      <Filter>Shaders\Compiled</Filter>
+    </None>
+    <None Include="Shaders\Compiled\Texenvmap_VSBasic.inc">
+      <Filter>Shaders\Compiled</Filter>
+    </None>
+    <None Include="Shaders\Compiled\Texenvmap_PSBasic.pdb">
+      <Filter>Shaders\Symbols</Filter>
+    </None>
+    <None Include="Shaders\Compiled\Texenvmap_VSBasic.pdb">
+      <Filter>Shaders\Symbols</Filter>
+    </None>
   </ItemGroup>
 </Project>
