--- a/Texenvmap/Texenvmap_Desktop_2019.vcxproj.filters
+++ b/Texenvmap/Texenvmap_Desktop_2019.vcxproj.filters
@@ -27,7 +27,6 @@
     <None Include="Shaders\CompileShaders.cmd">
       <Filter>Shaders</Filter>
     </None>
-    <None Include="Shaders\Texenvmap.fx" />
     <None Include="Shaders\Compiled\Texenvmap_PSBasic.inc">
       <Filter>Shaders\Compiled</Filter>
     </None>
@@ -38,6 +37,15 @@
       <Filter>Shaders\Symbols</Filter>
     </None>
     <None Include="Shaders\Compiled\Texenvmap_VSBasic.pdb">
+      <Filter>Shaders\Symbols</Filter>
+    </None>
+    <None Include="Shaders\Texenvmap.fx">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="Shaders\Compiled\Texenvmap_PSEquiRect.inc">
+      <Filter>Shaders\Compiled</Filter>
+    </None>
+    <None Include="Shaders\Compiled\Texenvmap_PSEquiRect.pdb">
       <Filter>Shaders\Symbols</Filter>
     </None>
   </ItemGroup>
